# pAI-physics

./: .dockerignore  .env.example  .gitignore  .llm_config.yaml  .llm_config.yaml.example  CAMPAIGN_QUICKSTART.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MATH_RESEARCH_PRIMER.md  OpenClaw_Use_Guide.md  README.md  campaign.yaml  campaign_muon_v4_iterate.yaml  campaign_muon_v5_iterate.yaml  campaign_muon_v5_iterate_rigorous.yaml  campaign_template.yaml  campaign_v2.yaml  campaign_v3_DEPRECATED.yaml  campaign_v4_DEPRECATED.yaml  docker-compose.yml  engaging_config.yaml  environment.cross-platform.yml  environment.yml  launch_multiagent.py  openpi  poggioaimsc  pyproject.toml  requirements-core.txt  requirements-docs.txt  requirements-experiment.txt  requirements-minimal.txt  requirements-observability.txt  requirements-web.txt
.claude/commands/: analyze_agent_context.md  refine_agent_prompt.md
.github/workflows/: ci.yml
archive/legacy_openpi_cli/cli/: pyproject.toml
archive/legacy_openpi_cli/cli/openpi/: __init__.py  main.py
archive/legacy_openpi_cli/cli/openpi/commands/: budget.py  campaign.py  config_cmd.py  doctor.py  resume.py
archive/legacy_openpi_cli/cli/openpi/core/: config_manager.py  flag_translator.py  platform_detect.py  presets.py
archive/muon_campaign_v5_20260318_194213/: campaign_v5.yaml  manifest.json
archive/muon_v6_test_20260318_194341/: campaign_muon_v6_test.yaml  manifest.json
archive/v1_20260318/: manifest.json
archive/v2_20260318/: campaign_v2_DEPRECATED.yaml  manifest.json
archive/v3_20260318/: manifest.json
archive/v4_20260318/: manifest.json
automation_tasks/: muon_experiments.txt  muon_paper.txt  muon_theory.txt  muon_v4_iterate_task.txt  muon_v5_iterate_task.txt  run1_theory_task.txt  run1_theory_task_stable.txt  run2_experiment_task_stable.txt  run2b_scaling_theory_task.txt  run3_paper_task_stable.txt  v2_experiment1_task.txt  v2_paper_task.txt  v2_theory1_task.txt  v2_theory2_task.txt  v5_discovery_task.txt
cli/: install.sh
cli/openpi/: __main__.py
config/: modes.yaml
consortium/: args.py  budget.py  compute_scaling.py  config.py  context_compaction.py  counsel.py  graph.py  graph_config.py  iterate.py  llm.py  milestone_report.py  mode.py  models.py  paper_contract.py  pdf_summary.py  persona_council.py  prereqs.py  run_status.py  runner.py  state.py  token_usage_tracker.py  utils.py  workflow_utils.py
consortium/agents/: __init__.py  base_agent.py  brainstorm_agent.py  experiment_design_agent.py  experiment_literature_agent.py  experiment_transcription_agent.py  experiment_verification_agent.py  experimentation_agent.py  formalize_goals_agent.py  formalize_results_agent.py  ideation_agent.py  literature_review_agent.py  manager_agent.py  math_empirical_verifier_agent.py  math_literature_agent.py  math_proposer_agent.py  math_prover_agent.py  math_rigorous_verifier_agent.py  proof_transcription_agent.py  proofreading_agent.py  research_plan_writeup_agent.py  research_planner_agent.py  resource_preparation_agent.py  results_analysis_agent.py  reviewer_agent.py  stage_write_tools.py  tool_registry.py  track_merge_node.py  writeup_agent.py
consortium/campaign/: __init__.py  archive.py  budget_manager.py  memory.py  notify.py  planner.py  planner_prompt.py  repair_agent.py  runner.py  spec.py  status.py
consortium/cli/: __init__.py  __main__.py  banner.py  display.py  errors.py  main.py
consortium/interaction/: callback_tools.py  http_steering.py  user_inststep.py
consortium/interpreters/: workspace_executor.py
consortium/logging/: __init__.py  llm_logger.py  training_data_logger.py
consortium/prompts/: __init__.py  brainstorm_instructions.py  document_formatting.py  duality_check_instructions.py  experiment_design_instructions.py  experiment_literature_instructions.py  experiment_transcription_instructions.py  experiment_verification_instructions.py  experimentation_instructions.py  formalize_goals_instructions.py  formalize_results_instructions.py  ideation_instructions.py  literature_review_instructions.py  manager_instructions.py  math_empirical_verifier_instructions.py  math_literature_instructions.py  math_proposer_instructions.py  math_prover_instructions.py  math_rigorous_verifier_instructions.py  persona_instructions.py  proof_transcription_instructions.py  proofreading_instructions.py  research_plan_writeup_instructions.py  research_planner_instructions.py  resource_preparation_instructions.py  results_analysis_instructions.py  reviewer_instructions.py  (+2 more)
docs/: architecture.md  data_formats.md  engaging_setup.md  langgraph_network.md  uplifts.md
freephdlabor/: args.py  budget.py  config.py  context_compaction.py  counsel.py  graph.py  llm.py  math_acceptance_validation.py  paper_traceability_validation.py  prereqs.py  result_validation.py  runner.py  state.py  token_usage_tracker.py  utils.py
knowledge/: campaign_journal.md
scripts/: bootstrap.sh  campaign_cli.py  campaign_heartbeat.py  campaign_heartbeat_slurm.sh  campaign_heartbeat_slurm_DEPRECATED.sh  campaign_monitor.py  export_private_token_report.py  fix_pdflatex_conda.sh  launch_heartbeat_v2.sh  launch_heartbeat_v2_DEPRECATED.sh  launch_multiagent_slurm.sh  launch_openclaw_gateway.sh  launch_orchestrator_engaging.sh  lemma_library_cli.py  openclaw_watchdog.sh  preflight_check.py  prepare_iterate_seed.py  relaunch_theory1_DEPRECATED.sh  render_langgraph_network.py  run_campaign_planner.py  run_math_track_DEPRECATED.sh  setup_mode.py  slurm_pipeline_v5.sh  slurm_pipeline_v5_rigorous.sh  submit_orchestrator.sh
tests/: test_brainstorm_gate.py  test_budget.py  test_campaign_recovery.py  test_cli_contracts.py  test_config.py  test_counsel.py  test_deep_research_tool.py  test_docs_smoke.py  test_extract_verdict.py  test_graph.py  test_graph_config.py  test_iterate.py  test_lit_review_gate.py  test_literature_rate_limit.py  test_openrouter_deep_research_tool.py  test_parallel_graph.py  test_prepare_iterate_seed.py  test_prereqs.py  test_runner.py  test_state.py  test_track_decomposition_gate.py  test_validation.py
(+206 files in other folders)
