[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consortium"
version = "0.1.0"
description = "Local multi-agent research-to-paper system powered by LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Minimal runtime dependencies (matches requirements-minimal.txt).
# Install extras for full functionality — see below.
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "litellm==1.81.15",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "openai==2.24.0",
    "anthropic==0.83.0",
    "backoff==2.2.1",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "pymupdf==1.27.1",
    "pdfminer.six==20260107",
    "pypdf==6.7.3",
    "chardet<6",
    "toml",
]

[project.optional-dependencies]
# pip install consortium[observability]
observability = [
    "langsmith>=0.1.0",
    "wandb",
]

# pip install consortium[docs]
# Matches requirements-docs.txt
docs = [
    "mammoth==1.9.1",
    "markdownify==1.1.0",
    "python-pptx",
    "puremagic",
    "pydub",
    "SpeechRecognition",
    "youtube-transcript-api",
]

# pip install consortium[web]
# Matches requirements-web.txt
web = [
    "crawl4ai",
    "playwright",
    "serpapi",
    "pathvalidate",
]

# pip install consortium[experiment]
experiment = [
    "torch",
    "transformers",
    "datasets",
    "huggingface_hub",
    "tokenizers",
    "tqdm",
    "wandb",
]

# pip install consortium[dev]
dev = [
    "pytest",
    "pytest-cov",
]

# pip install consortium[all]  — everything except vllm / gpu extras
all = [
    "consortium[observability,docs,web,experiment]",
]

[project.scripts]
consortium = "consortium.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["consortium*"]
