[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpi-cli"
version = "0.1.0"
description = "One-command CLI for the OpenPI multi-agent research pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "questionary>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
secure = ["keyring>=24.0"]

[project.scripts]
openpi = "openpi.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["openpi*"]
